--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
 #   steps:
 #   - script: echo hello from macOS
 variables:
-  node_version: 10.x
+  node_version: '10.x'
 
 - job: Windows
   pool:
