--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
+variables:
+  node_version: 10.x
+
 jobs:
 # - job: Linux
 #   pool:
@@ -9,8 +12,7 @@ jobs:
 #     vmImage: 'macOS-10.13'
 #   steps:
 #   - script: echo hello from macOS
-variables:
-  node_version: '10.x'
+
 
 - job: Windows
   pool:
